kubernetes/deployment-app.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: spareroom/ghost-google-cloud:42
        ports:
        - containerPort: 2368
        imagePullPolicy: Always
      - image: gcr.io/cloudsql-docker/gce-proxy:1.09
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                    "-instances=spareroom-blogs:europe-west1:ghost-db=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName:
                spareroomussql
        - name: cloud-storage-credentials
          secret:
            secretName:
                cloud-storage-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
